--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,87 @@ color: var(--pink);
     text-transform: uppercase;
 }
 
+.pricing .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+}
+
+.pricing .box-container .box{
+    text-align: center;
+    border-radius: .5rem;
+    background: var(--transparent-white);
+    box-shadow: var(--box-shadow);
+    padding: 2rem;
+}
+
+.pricing .box-container .box h3{
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: var(--black);
+}
+
+.pricing .box-container .box .price{
+    padding:1rem;
+    border-radius: .5rem;
+    background: var(--pink);
+    color: var(--white);
+    font-size: 3rem;
+    margin: 1rem;
+}
+
+.pricing .box-container .box .list p{
+    font-size: 1.5rem;
+    color: var(--black);
+    padding: 1rem 0;
+}
+
+.pricing .box-container .box .list p i{
+    padding-right: .5rem;
+    color: var(--pink);
+}
+
+.reviews .slide{
+    margin-bottom: 4rem;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    text-align: center;
+    padding: 2rem;
+    background: var(--transparent-white);
+    user-select: none;
+}
+
+.reviews .slide img{
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    margin-bottom: .5rem;
+}
+
+.reviews .slide h3{
+    font-size: 2rem;
+    color: var(--black);
+    text-transform: capitalize;
+}
+
+.reviews .slide p{
+    font-size: 1.5rem;
+    line-height: 2;
+    color: var(--black);
+    padding: 1rem 0;
+}
+
+.reviews .slide .stars{
+    margin-top: .5rem;
+}
+
+.reviews .slide .stars i{
+    font-size: 1.7rem;
+    color: var(--pink);
+}
+
+
+
 
 .footer{
     background: var(--transparent-white);
