contact section added

--- a/css/style.css
+++ b/css/style.css
@@ -412,6 +412,51 @@ color: var(--pink);
     color: var(--pink);
 }
 
+.contact form{
+    padding: 2rem;
+    box-shadow: var(--box-shadow);
+    border-radius: .5rem;
+    background: var(--transparent-white);
+}
+
+.contact form .flex{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.contact form .flex .inputBox{
+    flex: 1 1 41rem;
+}
+
+.contact form .flex .inputBox span{
+    display: block;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+    color: var(--black);
+}
+
+.contact form .flex .inputBox input,
+.contact form .flex .inputBox textarea,
+.contact form .flex .inputBox select{
+    width: 100%;
+    padding: 1.2rem 1.4rem;
+    border: var(--border);
+    border-radius: .5rem;
+    font-size: 1.7rem;
+    background: var(--transparent-white);
+}
+
+.contact form .flex .inputBox textarea{
+    height: 20rem;
+    resize: none;
+}
+
+.contact form .btn{
+    margin-top: 2rem;
+}
+
+
 
 
 
@@ -532,6 +577,11 @@ color: var(--pink);
 
     .services .slide .content p{
         font-size: 1.3rem;
+    }
+
+    .contact form .btn{
+        display: block;
+        width: 100%;
     }
 }
 
